# doodles

./: README.md
ActiveSinks/AsynchronousSink/: Active.h  DynamicAddSinksWithDifferentTypes.h  assorted_async_testing.h  g2future.h  herb_test.h  main.cpp  sink.h  unique_memory.h  wrapper.h
HelloWorld/: main.cpp
TcmallocExample/: CMakeLists.txt
TcmallocExample/src/: Allocate.cpp  Allocate.h  main.cpp
